<resources>
    <string name="app_name">SuperWiki</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="view_pager2_image">View Pager2 image</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_button">Search button</string>
    <string name="name">Name</string>
    <string name="real_name">Real name</string>
    <string name="publisher">Publisher</string>
    <string name="na">NA</string>
    <string name="biography">Biography</string>
    <string name="bruce_wayne">Bruce Wayne</string>
    <string name="dc_comics">DC Comics</string>
    <string name="first_appearance">First appearance</string>
    <string name="detective_comics_27">Detective Comics #27</string>
    <string name="alter_egos">Alter Egos</string>
    <string name="no_alter_egos">No alter egos</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="crest_hill_bristol_township_gotham_county">Crest Hill, Bristol Township; Gotham County</string>
    <string name="aliases">Aliases</string>
    <string name="insider">Insider</string>
    <string name="alignment">Alignment</string>
    <string name="good">Good</string>
    <string name="appearance">Appearance</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="race">Race</string>
    <string name="human">Human</string>
    <string name="height">Height</string>
    <string name="_180cm">180cm</string>
    <string name="weight">Weight</string>
    <string name="_80_kg">80 kg</string>
    <string name="eye_color">Eye Color</string>
    <string name="black">Black</string>
    <string name="hair_color">Hair Color</string>
    <string name="work">Work</string>
    <string name="occupation">Occupation</string>
    <string name="businessman">Businessman</string>
    <string name="batcave">Batcave</string>
    <string name="base">Base</string>
    <string name="connections">Connections</string>
    <string name="group_affiliation">Group Affiliation</string>
    <string name="relatives">Relatives</string>
    <string name="batman_family">Batman family</string>
    <string name="_100">100</string>
    <string name="powerstat">Powerstat</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="header_image">Header image</string>
    <string name="search_results">Search results for:</string>
    <string name="empty_search_string">Please enter something</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="last_page">Last Page</string>
    <string name="first_page">First Page</string>
    <string name="back_button">Back button</string>
    <string name="next_button">Next button</string>
    <string name="no_result_found">No results found</string>
</resources>
