<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginTop="@dimen/dp_8"
    android:layout_marginEnd="@dimen/dp_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_boundary_outline"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_real_name_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/real_name"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_real_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/bruce_wayne"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_real_name_heading"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_publisher_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/publisher"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_real_name" />

        <TextView
            android:id="@+id/tv_publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/dc_comics"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_publisher_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_real_name" />

        <TextView
            android:id="@+id/tv_first_appearance_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/first_appearance"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher" />

        <TextView
            android:id="@+id/tv_first_appearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/detective_comics_27"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_first_appearance_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher_heading" />

        <TextView
            android:id="@+id/tv_alter_egos_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/alter_egos"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_first_appearance" />

        <TextView
            android:id="@+id/tv_alter_egos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/no_alter_egos"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_alter_egos_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_first_appearance" />

        <TextView
            android:id="@+id/tv_place_of_birth_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/place_of_birth"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alter_egos" />

        <TextView
            android:id="@+id/tv_place_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/crest_hill_bristol_township_gotham_county"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_place_of_birth_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_alter_egos" />

        <TextView
            android:id="@+id/tv_aliases_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/aliases"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_place_of_birth" />

        <TextView
            android:id="@+id/tv_aliases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/insider"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_aliases_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_place_of_birth" />

        <TextView
            android:id="@+id/tv_alignment_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/alignment"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_aliases" />

        <TextView
            android:id="@+id/tv_alignment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/good"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_alignment_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_aliases" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_biography_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boundary_outline"
        android:backgroundTint="@color/primary_light"
        android:gravity="center"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/biography"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:translationX="@dimen/dp_16"
        android:translationY="@dimen/dp_16"
        app:layout_constraintBottom_toTopOf="@id/main_layout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>