<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginTop="@dimen/dp_8"
    android:layout_marginEnd="@dimen/dp_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_boundary_outline"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_gender_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/gender"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/male"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_gender_heading"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_race_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/race"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

        <TextView
            android:id="@+id/tv_race"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/human"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_race_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

        <TextView
            android:id="@+id/tv_height_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/height"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_race" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/_180cm"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_height_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_race" />

        <TextView
            android:id="@+id/tv_weight_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/weight"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_height" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/_80_kg"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_weight_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_height" />

        <TextView
            android:id="@+id/tv_eye_color_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/eye_color"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_weight" />

        <TextView
            android:id="@+id/tv_eye_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/black"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_eye_color_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_weight" />

        <TextView
            android:id="@+id/tv_hair_color_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/hair_color"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_eye_color" />

        <TextView
            android:id="@+id/tv_hair_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/black"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_hair_color_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_eye_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_appearance_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boundary_outline"
        android:backgroundTint="@color/primary_light"
        android:gravity="center"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/appearance"
        android:textColor="@color/icons"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:translationX="@dimen/dp_16"
        android:translationY="@dimen/dp_16"
        app:layout_constraintBottom_toTopOf="@id/main_layout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>