<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginTop="@dimen/dp_8"
    android:layout_marginEnd="@dimen/dp_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_boundary_outline"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_group_affiliation_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/group_affiliation"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_group_affiliation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/batman_family"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_group_affiliation_heading"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_relatives_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/relatives"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_group_affiliation" />

        <TextView
            android:id="@+id/tv_relatives"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/bruce_wayne"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_relatives_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_group_affiliation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_connections_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boundary_outline"
        android:backgroundTint="@color/primary_light"
        android:gravity="center"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/connections"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:translationX="@dimen/dp_16"
        android:translationY="@dimen/dp_16"
        app:layout_constraintBottom_toTopOf="@id/main_layout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>